2012.01.06

* Added a Makefile that will eventually replace the admin scripts.
* Added *ignore files.
* Updated Makefile with improved (and more) targets as well as support for both
bzr and git.

2009.11.09

* Removed the version hack and determined version of the request made to the
server by message format/spec support.

2009.11.08

* Added import checks in auth.py.
* Added test case for auth imports.
* Fixed up the import unit tests with reloads.
* Added unit tests for realm test case.
* Restructured the get* methods for the web and web2 modules.
* Added unit tests for wrapped resource test case.
* Removed version 1 test methods in JSONRPC test case.
* Added unit tests for jsonrpclib.dumps.
* Added unit tests for jsonrpc.BaseProxy.
* Updated defs with svn branch.
* Added unit tests for base query factory.
* Started a test case for the jsonrpclib loads function.
* Fixed the server's render callback where the version was being passed as
unicode instead of an int.
* Touched up a unit test.
* Updated the spec docs with a change.

2009.11.07

* Added authentication support with cred for twisted.web2-based JSON-RPC
reources.
* Updated history file.
* Added test case for auth imports.

2009.11.06

* Reverted trunk to pre-version-work point.
* Cherry-picked the change that added missing deferred returns in two tests.
* Cherry-picked the change that added the testing helper subpackage.
* Cherry-picked the change that added the doctest runner.
* Cherry-picked changes to the examples and updated the example-runner.
* Added authentication infrasturcture so that twisted.web-based txJSON-RPC
servers can be written to support twisted.cred.

2009.10.22

* Added support for version 1.0 of the JSON-RPC spec to jsonrpclib.
* Finished the pre-version 1.0 spec.
* Updated the version 1.0 spec with response examples.
* Updated web and web2 JSON-RPC to extract and pass the id and version
parameters.

2009.10.21

* Updated the QueryFactory to take a version parameter in the constructor.